# -C-plus-proramming-jurney

./: README.md  Readme.md
A.Methods/: book.cpp  dog.cpp
Applications on A,B,C,D/: Apps.cpp
B.Encapsolation/: en.cpp
C.Inhiritance/: inhirit.cpp
Contest/: Readme.md
D.Simple calculator/: Readme.md  calculator.cpp
Date/: date.cpp
Factorial-Countdown/: CD.cpp  README.md  fact.cpp
Files/: Files.cpp  Mariem.txt  Readfile.txt
Include Guards & pragma/: main.cpp  math_utile.h
Lamda function/: lamda.cpp
Ons/: CMakeLists.txt  Inno Setup Script(Ons).iss  Ons persintation.pptx  Ons.iss  Ons.lnk  Ons.script.iss  Readme.md  built.bat  main.cpp  resource.rc  zikr.cpp  zikr.h
Ons/Ons Extensions/: Azkar.txt  resource.rc
Static library/library2/: main.cpp  say_hello.cpp  say_hello.h
pointer/: ponter$array.cpp
polymorphizm/: Application.cpp  polymorphizm.cpp
share library/: Shared library.txt
share library/lib1/: main.cpp  math_util.cpp  math_util.h
share library/lib2/: implement.cpp  implement.h  main.cpp
struct-enum/: README.md  Struct&enu.cpp
template/: ApplicationTemplate.cpp  template.cpp
